Add initial implementation of Kotlin ECS library with README and example app
- Created README.md to describe the project, its architecture, and usage.
- Added initial ECS components including Entity, Component, and System management.
- Implemented Todo application as an example of ECS usage with Jetpack Compose.
- Included necessary theme and UI components for the application.
- Set up logging configuration with Logback.
- Updated Gradle configuration for Kotlin and Android plugin versions.
- Added various utility classes and functions for ECS integration with Compose.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-agp = "8.6.0"
-kotlin = "1.9.23"
-coreKtx = "1.13.1"
+agp = "8.6.1"
+kotlin = "2.1.10"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -36,6 +36,6 @@ symbol-processing-api = { module = "com.google.devtools.ksp:symbol-processing-ap
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlinx-serialization-plugin = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp-plugin = { id = "com.google.devtools.ksp", version.ref= "symbolProcessingApi"}
 
